[project]
name = "mysql-mcp-server"
version = "0.1.0"
description = "MySQL MCP Server - A MySQL wrapper using the official Anthropic MCP package with Streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "langchain-core>=0.3.76",
    "typer>=0.19.2",
    "langchain-anthropic>=0.1.0",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "langchain[anthropic]>=0.3.27",
    "ruff>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[project.scripts]
mysql-mcp-server = "langchain_streaming_mcp.mcp_server:run"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = false
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "YTT", # flake8-2020
    "S",   # bandit
    "BLE", # flake8-blind-except
    "C90", # mccabe
    "T20", # flake8-print
]
ignore = [
    "S101",  # assert used
    "S603",  # subprocess call
    "S607",  # start process with partial path
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S", "T20"]

[tool.ruff.isort]
known-first-party = ["langchain_streaming_mcp"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "langchain.*",
    "langchain_core.*"
]
ignore_missing_imports = true
